Fixed adding menu image and display cards overlap issue

--- a/public/assets/css/admin/menus.css
+++ b/public/assets/css/admin/menus.css
@@ -3,7 +3,7 @@
     transition: 0.3s;
     width: 200px;
     height: 150px;
-    margin: 10px;
+    margin: 50px;
 }
 
 .card:hover {
@@ -22,8 +22,5 @@
 }
 
 .card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: left;
     max-width: 1200px;
 }
